<resources>
    <string name="app_name">Perfect Pancakes</string>
    <string name="title_home">Pancake Time</string>
    <string name="title_dashboard">Your Recipe</string>
    <string name="title_notifications">Pancake History</string>
    <string name="result_batter_description">Amount of batter needed:</string>
    <string name="result_batter_ingredients">For the batter you\'ll need the following ingredients:</string>
    <string name="result_starting_ml">0 ml</string>
    <string name="result_starting_g">0 g</string>
    <string name="result_starting_null">0</string>
    <string name="result_eggs_description">Amount of Eggs:</string>
    <string name="result_milk_description">Amount of Milk:</string>
    <string name="result_butter_description">Amount of Butter:</string>
    <string name="result_flour_description">Amount of Flour:</string>
    <string name="result_water_description">Amount of Water:</string>
    <string name="input_title_description">Name of the recipe</string>
    <string name="input_diameter_description">Pan diameter in cm</string>
    <string name="input_thiccness_description">Desired thickness in cm</string>
    <string name="input_amount_description">Number of pancakes</string>
    <string name="button_Lets_make_pancakes">Let\'s Make Pancakes!</string>
    <string name="about_what_is_pp"><b>What is Perfect Pancakes?</b></string>
    <string name="about_perfect_pancakes">Perfect Pancakes is an App that tells you the perfect
        amount of ingredients depending on your diameter of your pan, the desired thickness of your
        pancakes and the amount of pancakes you want to cook!
    </string>
    <string name="about_formular"><b>How does it work?</b></string>
    <string name="about_formular_explained">The formular of <b>Perfect Pancakes</b> is based on a
    research from ...
    </string>
    <string name="about_more"><b>You can find more about this here:</b></string>
    <string name="about_more_link"><a href="https://phys.org/news/2016-02-secret-pancake-mathematically.html">Article about how to make the perfect pancakes</a></string>
</resources>
